Fix canvas z-index

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -113,6 +113,7 @@ canvas {
   top: 0;
   left: 0;
   pointer-events: none;
+  z-index: -1;
 }
 
 button {
